--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta property="twitter:image" content="%PUBLIC_URL%/social-image.png" />
     <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
+    <link href="%PUBLIC_URL%/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/assets/vendor/aos/aos.css" rel="stylesheet">
+  
+    <!-- Template Main CSS File -->
+    <link href="%PUBLIC_URL%/assets/css/style.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,5 +54,23 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
+  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="%PUBLIC_URL%/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/php-email-form/validate.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/counterup/counterup.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/typed.js/typed.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/vendor/aos/aos.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="%PUBLIC_URL%/assets/js/main.js"></script>
   </body>
 </html>
